--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
 		<dependency>
 			<groupId>br.com.autocom</groupId>
 			<artifactId>nfe-wsdl</artifactId>
-			<version>3.10</version>
+			<version>3.10a</version>
 		</dependency>
 		
 		<!-- XSD Nfe -->
@@ -86,5 +86,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>3.10.2</version>
+	<version>3.10.3</version>
 </project>
