--- a/pom.xml
+++ b/pom.xml
@@ -64,8 +64,21 @@
 		</dependency>
 		
 	</dependencies>
+	
+	<properties>
+        <java.version>1.8</java.version>
+    </properties>
 	<build>
 		<plugins>
+		 <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                </configuration>
+            </plugin>
 			<plugin>
 			    <groupId>org.apache.maven.plugins</groupId>
 			    <artifactId>maven-assembly-plugin</artifactId>
@@ -86,5 +99,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>3.10.3</version>
+	<version>3.11.0</version>
 </project>
