--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 			<version>1.6.2</version>
 		</dependency>
 		
+		<!-- Ini4J -->
+		<dependency>
+			<groupId>org.ini4j</groupId>
+			<artifactId>ini4j</artifactId>
+			<version>0.5.4</version>
+		</dependency>
+		
 	</dependencies>
 	
 	<properties>
