--- a/src/main/resources/WebServices.ini
+++ b/src/main/resources/WebServices.ini
@@ -387,7 +387,7 @@ RecepcaoEvento_1.00=https://homologacao.nfe.fazenda.sp.gov.br/ws/RecepcaoEvento.
 NfeInutilizacao_3.10=https://homologacao.nfe.fazenda.sp.gov.br/ws/nfeinutilizacao2.asmx
 NfeConsultaProtocolo_3.10=https://homologacao.nfe.fazenda.sp.gov.br/ws/nfeconsulta2.asmx
 NfeStatusServico_3.10=https://homologacao.nfe.fazenda.sp.gov.br/ws/nfestatusservico2.asmx
-NFeAutorizacao_3.10=https://homologacao.nfe.fazenda.sp.gov.br/ws/nfeautorizacao.asmx
+NfeAutorizacao_3.10=https://homologacao.nfe.fazenda.sp.gov.br/ws/nfeautorizacao.asmx
 NFeRetAutorizacao_3.10=https://homologacao.nfe.fazenda.sp.gov.br/ws/nferetautorizacao.asmx
 
 [NFe_TO_P]
