Adicionado Download por Chave

--- a/src/main/resources/WebServices.ini
+++ b/src/main/resources/WebServices.ini
@@ -163,8 +163,11 @@ NfeConsultaCadastro_2.0=https://sistemas.sefaz.ma.gov.br/wscadastro/CadConsultaC
 NfeRecepcao_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeRecepcao2
 NfeRetRecepcao_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeRetRecepcao2
 NfeInutilizacao_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeInutilizacao2
+NfeInutilizacao_3.10=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeInutilizacao2
 NfeConsultaProtocolo_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeConsulta2
+NfeConsultaProtocolo_3.10=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeConsulta2
 NfeStatusServico_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeStatus2
+NfeStatusServico_3.10=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeStatus2
 NfeConsultaCadastro_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/cadconsultacadastro2
 RecepcaoEvento_1.00=https://nfe.fazenda.mg.gov.br/nfe2/services/RecepcaoEvento
 NfeAutorizacao_3.10=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeAutorizacao
