Corrigido WebService MT e adicionado novo Cacert

--- a/src/main/resources/WebServices.ini
+++ b/src/main/resources/WebServices.ini
@@ -232,12 +232,18 @@ NFeRetAutorizacao_3.10=https://nfe.sefaz.mt.gov.br/nfews/v2/services/NfeRetAutor
 
 [NFe_MT_H]
 NfeRecepcao_2.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeRecepcao2?wsdl
+NfeRecepcao_3.10=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeRecepcao2?wsdl
 NfeRetRecepcao_2.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeRetRecepcao2?wsdl
+NfeRetRecepcao_3.10=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeRetRecepcao2?wsdl
 NfeInutilizacao_2.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeInutilizacao2?wsdl
+NfeInutilizacao_3.10=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeInutilizacao2?wsdl
 NfeConsultaProtocolo_2.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeConsulta2?wsdl
+NfeConsultaProtocolo_3.10=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeConsulta2?wsdl
 NfeStatusServico_2.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeStatusServico2?wsdl
+NfeStatusServico_3.10=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeStatusServico2?wsdl
 RecepcaoEvento_1.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/RecepcaoEvento?wsdl
 NfeConsultaCadastro_2.00=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/CadConsultaCadastro2?wsdl
+NfeConsultaCadastro_3.10=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/CadConsultaCadastro2?wsdl
 NfeAutorizacao_3.10=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeAutorizacao?wsdl
 NFeRetAutorizacao_3.10=https://homologacao.sefaz.mt.gov.br/nfews/v2/services/NfeRetAutorizacao?wsdl
 
