--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
 			<version>8.i.2_DFe1.02a</version>
 		</dependency>
 
+		<!-- Certificado Utils -->
+		<dependency>
+			<groupId>br.com.samuelweb</groupId>
+			<artifactId>java_certificado</artifactId>
+			<version>1.0</version>
+		</dependency>
+
 		<!-- MArsheller Cdata -->
 		<dependency>
 			<groupId>com.sun.xml.txw2</groupId>
@@ -119,5 +126,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>3.10.8a</version>
+	<version>3.10.8b</version>
 </project>
