--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
 		<dependency>
 			<groupId>br.com.samuelweb</groupId>
 			<artifactId>java_certificado</artifactId>
-			<version>1.0</version>
+			<version>1.1</version>
 		</dependency>
 
 		<!-- MArsheller Cdata -->
@@ -126,5 +126,5 @@
 			</plugin>
 		</plugins>
 	</build>
-	<version>3.10.8b</version>
+	<version>3.10.8c</version>
 </project>
