Adicionado Cancelamento, Carta de Correcao e Manifestação

--- a/src/main/resources/WebServices.ini
+++ b/src/main/resources/WebServices.ini
@@ -75,6 +75,7 @@ NfeConsultaProtocolo_2.00=https://hnfe.sefaz.ba.gov.br/webservices/nfenw/nfecons
 NfeStatusServico_2.00=https://hnfe.sefaz.ba.gov.br/webservices/nfenw/NfeStatusServico2.asmx
 NfeConsultaCadastro_2.00=https://hnfe.sefaz.ba.gov.br/webservices/nfenw/CadConsultaCadastro2.asmx
 RecepcaoEvento_1.00=https://hnfe.sefaz.ba.gov.br/webservices/sre/recepcaoevento.asmx
+RecepcaoEvento_4.00=https://hnfe.sefaz.ba.gov.br/webservices/NFeRecepcaoEvento4/NFeRecepcaoEvento4.asmx
 NfeInutilizacao_3.10=https://hnfe.sefaz.ba.gov.br/webservices/NfeInutilizacao/NfeInutilizacao.asmx
 NfeConsultaProtocolo_3.10=https://hnfe.sefaz.ba.gov.br/webservices/NfeConsulta/NfeConsulta.asmx
 NfeStatusServico_3.10=https://hnfe.sefaz.ba.gov.br/webservices/NfeStatusServico/NfeStatusServico.asmx
