--- a/src/main/resources/WebServices.ini
+++ b/src/main/resources/WebServices.ini
@@ -849,9 +849,9 @@ NfeInutilizacao_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/NFeInutilizaca
 NfeStatusServico_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/NFeStatusServico4
 RecepcaoEvento_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/NFeRecepcaoEvento4
 NfeConsultaCadastro_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/CadConsultaCadastro4
-URL-QRCode=http://www.dfeportal.fazenda.pr.gov.br/dfe-portal/rest/servico/consultaNFCe
+URL-QRCode=http://www.fazenda.pr.gov.br/nfce/qrcode
 URL-QRCode_4.00=http://www.fazenda.pr.gov.br/nfce/qrcode
-URL-ConsultaNFCe=http://www.fazenda.pr.gov.br/
+URL-ConsultaNFCe=http://www.fazenda.pr.gov.br
 
 [NFCe_RJ_P]
 Usar=NFCe_SVRS_P
