--- a/src/main/resources/WebServices.ini
+++ b/src/main/resources/WebServices.ini
@@ -720,26 +720,26 @@ URL-QRCode=http://www.receita.pb.gov.br/nfcehom
 URL-ConsultaNFCe=http://www.receita.pb.gov.br/nfcehom
 
 [NFCe_PE_P]
-NfeAutorizacao_3.10=https://nfce.sefaz.pe.gov.br/nfe-service/services/NfeAutorizacao
-NfeRetAutorizacao_3.10=https://nfce.sefaz.pe.gov.br/nfe-service/services/NfeRetAutorizacao
+NfeAutorizacao_3.10=https://nfce.svrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao.asmx
+NfeRetAutorizacao_3.10=https://nfce.svrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao.asmx
 NfeCancelamento_3.10=https://nfce.sefaz.pe.gov.br/nfe-service/services/NfeCancelamento2
-NfeInutilizacao_3.10=https://nfce.sefaz.pe.gov.br/nfe-service/services/NfeInutilizacao2
-NfeStatusServico_3.10=https://nfce.sefaz.pe.gov.br/nfe-service/services/NfeStatusServico2
-NfeConsultaNF_3.10=https://nfce.sefaz.pe.gov.br/nfe-service/services/NfeConsulta2
+NfeInutilizacao_3.10=https://nfce.svrs.rs.gov.br/ws/nfeinutilizacao/nfeinutilizacao2.asmx
+NfeStatusServico_3.10=https://nfce.svrs.rs.gov.br/ws/NfeStatusServico/NfeStatusServico2.asmx
+NfeConsultaNF_3.10=https://nfce.svrs.rs.gov.br/ws/NfeConsulta/NfeConsulta2.asmx
 NfeConsultaCadastro_3.10=https://nfce.sefaz.pe.gov.br/nfe-service/services/CadConsultaCadastro2
-RecepcaoEvento_3.10=https://nfce.sefaz.pe.gov.br/nfe-service/services/RecepcaoEvento
+RecepcaoEvento_3.10=https://nfce.svrs.rs.gov.br/ws/recepcaoevento/recepcaoevento.asmx
 URL-QRCode=http://nfce.sefaz.pe.gov.br/nfce-web/consultarNFCe
 URL-ConsultaNFCe=http://nfce.sefaz.pe.gov.br/nfce-web/consultarNFCe
 
 [NFCe_PE_H]
-NfeAutorizacao_3.10=https://nfcehomolog.sefaz.pe.gov.br/nfe-service/services/NfeAutorizacao
-NfeRetAutorizacao_3.10=https://nfcehomolog.sefaz.pe.gov.br/nfe-service/services/NfeRetAutorizacao
+NfeAutorizacao_3.10=https://nfce-homologacao.svrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao.asmx
+NfeRetAutorizacao_3.10=	https://nfce-homologacao.svrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao.asmx
 NfeCancelamento_3.10=https://nfcehomolog.sefaz.pe.gov.br/nfe-service/services/NfeCancelamento2
-NfeInutilizacao_3.10=https://nfcehomolog.sefaz.pe.gov.br/nfe-service/services/NfeInutilizacao2
-NfeStatusServico_3.10=https://nfcehomolog.sefaz.pe.gov.br/nfe-service/services/NfeStatusServico2
-NfeConsultaNF_3.10=https://nfcehomolog.sefaz.pe.gov.br/nfe-service/services/NfeConsulta2
+NfeInutilizacao_3.10=https://nfce-homologacao.svrs.rs.gov.br/ws/nfeinutilizacao/nfeinutilizacao2.asmx
+NfeStatusServico_3.10=https://nfce-homologacao.svrs.rs.gov.br/ws/NfeStatusServico/NfeStatusServico2.asmx
+NfeConsultaNF_3.10=https://nfce-homologacao.svrs.rs.gov.br/ws/NfeConsulta/NfeConsulta2.asmx
 NfeConsultaCadastro_3.10=https://nfcehomolog.sefaz.pe.gov.br/nfe-service/services/CadConsultaCadastro2
-RecepcaoEvento_3.10=https://nfcehomolog.sefaz.pe.gov.br/nfe-service/services/RecepcaoEvento
+RecepcaoEvento_3.10=https://nfce-homologacao.svrs.rs.gov.br/ws/recepcaoevento/recepcaoevento.asmx
 URL-QRCode=http://nfcehomolog.sefaz.pe.gov.br/nfce-web/consultarNFCe
 URL-ConsultaNFCe=http://nfcehomolog.sefaz.pe.gov.br/nfce-web/consultarNFCe
 
