--- a/src/main/resources/WebServices.ini
+++ b/src/main/resources/WebServices.ini
@@ -601,6 +601,8 @@ URL-ConsultaNFCe=http://dec.fazenda.df.gov.br/nfce
 
 [NFCe_ES_P]
 Usar=NFCe_SVRS_P
+URL-QRCode=http://app.sefaz.es.gov.br/ConsultaNFCe/QRCode.aspx
+URL-ConsultaNFCe=http://app.sefaz.es.gov.br/ConsultaNFCe
 
 [NFCe_ES_H]
 Usar=NFCe_SVRS_H
