--- a/src/main/resources/WebServices.ini
+++ b/src/main/resources/WebServices.ini
@@ -440,6 +440,7 @@ NfeStatusServico_4.00=https://nfe.sefazrs.rs.gov.br/ws/NfeStatusServico/NfeStatu
 RecepcaoEvento_4.00=https://nfe.sefazrs.rs.gov.br/ws/recepcaoevento/recepcaoevento4.asmx
 NFeAutorizacao_4.00=https://nfe.sefazrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4.asmx
 NFeRetAutorizacao_4.00=https://nfe.sefazrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
+NfeConsultaCadastro_4.00=https://cad.sefazrs.rs.gov.br/ws/cadconsultacadastro/cadconsultacadastro4.asmx
 
 [NFe_RS_H]
 NfeAutorizacao_3.10=https://nfe-homologacao.sefazrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao.asmx
@@ -458,6 +459,7 @@ NfeStatusServico_4.00=https://nfe-homologacao.sefazrs.rs.gov.br/ws/NfeStatusServ
 RecepcaoEvento_4.00=https://nfe-homologacao.sefazrs.rs.gov.br/ws/recepcaoevento/recepcaoevento4.asmx
 NFeAutorizacao_4.00=https://nfe-homologacao.sefazrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4.asmx
 NFeRetAutorizacao_4.00=https://nfe-homologacao.sefazrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
+NfeConsultaCadastro_4.00=https://cad.sefazrs.rs.gov.br/ws/cadconsultacadastro/cadconsultacadastro4.asmx
 
 [NFe_RR_P]
 Usar=NFe_SVRS_P
@@ -803,8 +805,7 @@ NfeConsultaCadastro_4.00=https://nfe.sefaz.go.gov.br/nfe/services/CadConsultaCad
 NFeAutorizacao_4.00=https://nfe.sefaz.go.gov.br/nfe/services/NFeAutorizacao4?wsdl
 NFeRetAutorizacao_4.00=https://nfe.sefaz.go.gov.br/nfe/services/NFeRetAutorizacao4?wsdl
 URL-QRCode=http://nfe.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
-URL-ConsultaNFCe=http://nfe.sefaz.go.gov.br/nfeweb/jsp/ConsultaDANFENFCe.jsf
-URL-ConsultaNFCe_4.0=http://nfe.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
+URL-ConsultaNFCe=http://nfe.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
 
 [NFCe_GO_H]
 RecepcaoEvento_1.00=https://homolog.sefaz.go.gov.br/nfe/services/v2/RecepcaoEvento?wsdl
@@ -829,8 +830,7 @@ NfeConsultaCadastro_4.00=https://homolog.sefaz.go.gov.br/nfe/services/CadConsult
 NFeAutorizacao_4.00=https://homolog.sefaz.go.gov.br/nfe/services/NFeAutorizacao4?wsdl
 NFeRetAutorizacao_4.00=https://homolog.sefaz.go.gov.br/nfe/services/NFeRetAutorizacao4?wsdl
 URL-QRCode=http://homolog.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
-URL-ConsultaNFCe=http://homolog.sefaz.go.gov.br/nfeweb/jsp/ConsultaDANFENFCe.jsf
-URL-ConsultaNFCe_4.0=http://homolog.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
+URL-ConsultaNFCe=http://homolog.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
 
 [NFCe_MA_P]
 Usar=NFCe_SVRS_P
@@ -882,6 +882,12 @@ NfeInutilizacao_3.10=https://nfce.sefaz.mt.gov.br/nfcews/services/NfeInutilizaca
 RecepcaoEvento_1.00=https://nfce.sefaz.mt.gov.br/nfcews/services/RecepcaoEvento?wsdl
 NfeStatusServico_3.10=https://nfce.sefaz.mt.gov.br/nfcews/services/NfeStatusServico2?wsdl
 NfeConsultaProtocolo_3.10=https://nfce.sefaz.mt.gov.br/nfcews/services/NfeConsulta2?wsdl
+RecepcaoEvento_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/RecepcaoEvento4
+NfeInutilizacao_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeInutilizacao4
+NfeConsultaProtocolo_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeConsulta4
+NfeStatusServico_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeStatusServico4
+NFeAutorizacao_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeAutorizacao4
+NFeRetAutorizacao_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeRetAutorizacao4
 URL-QRCode=http://www.sefaz.mt.gov.br/nfce/consultanfce
 URL-ConsultaNFCe=http://www.sefaz.mt.gov.br/nfce/consultanfce
 
@@ -892,9 +898,14 @@ NfeInutilizacao_3.10=https://homologacao.sefaz.mt.gov.br/nfcews/services/NfeInut
 RecepcaoEvento_1.00=https://homologacao.sefaz.mt.gov.br/nfcews/services/RecepcaoEvento?wsdl
 NfeStatusServico_3.10=https://homologacao.sefaz.mt.gov.br/nfcews/services/NfeStatusServico2?wsdl
 NfeConsultaProtocolo_3.10=https://homologacao.sefaz.mt.gov.br/nfcews/services/NfeConsulta2?wsdl
+RecepcaoEvento_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/RecepcaoEvento4
+NfeInutilizacao_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeInutilizacao4
+NfeConsultaProtocolo_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeConsulta4
+NfeStatusServico_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeStatusServico4
+NFeAutorizacao_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeAutorizacao4
+NFeRetAutorizacao_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeRetAutorizacao4
 URL-QRCode=http://homologacao.sefaz.mt.gov.br/nfce/consultanfce
 URL-ConsultaNFCe=http://homologacao.sefaz.mt.gov.br/nfce/consultanfce
-NfeStatusServico_4.00=https://nfe.sefaz.mt.gov.br/nfews/v2/services/NfeStatusServico4?wsdl
 
 [NFCe_PA_P]
 Usar=NFCe_SVRS_P
