- Adicionado URLS MT Nfce Homologação

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -93,8 +93,6 @@ NfeInutilizacao_4.00=https://hnfe.sefaz.ba.gov.br/webservices/NFeInutilizacao4/N
 NFeRetAutorizacao_4.00=https://hnfe.sefaz.ba.gov.br/webservices/NFeRetAutorizacao4/NFeRetAutorizacao4.asmx
 NfeStatusServico_4.00=https://hnfe.sefaz.ba.gov.br/webservices/NFeStatusServico4/NFeStatusServico4.asmx
 RecepcaoEvento_4.00=https://hnfe.sefaz.ba.gov.br/webservices/NFeRecepcaoEvento4/NFeRecepcaoEvento4.asmx
-WSDL=WSDL_V4_SP
-SoapAction=SOAP_V4_SP
 
 [NFe_CE_P]
 RecepcaoEvento_1.00=https://nfe.sefaz.ce.gov.br/nfe2/services/RecepcaoEvento?wsdl
@@ -894,12 +892,12 @@ NfeInutilizacao_3.10=https://homologacao.sefaz.mt.gov.br/nfcews/services/NfeInut
 RecepcaoEvento_1.00=https://homologacao.sefaz.mt.gov.br/nfcews/services/RecepcaoEvento?wsdl
 NfeStatusServico_3.10=https://homologacao.sefaz.mt.gov.br/nfcews/services/NfeStatusServico2?wsdl
 NfeConsultaProtocolo_3.10=https://homologacao.sefaz.mt.gov.br/nfcews/services/NfeConsulta2?wsdl
-RecepcaoEvento_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/RecepcaoEvento4
-NfeInutilizacao_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeInutilizacao4
-NfeConsultaProtocolo_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeConsulta4
-NfeStatusServico_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeStatusServico4
-NFeAutorizacao_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeAutorizacao4
-NFeRetAutorizacao_4.00=https://nfce.sefaz.mt.gov.br/nfcews/v2/services/NfeRetAutorizacao4
+RecepcaoEvento_4.00=https://homologacao.sefaz.mt.gov.br/nfcews/services/RecepcaoEvento4
+NfeInutilizacao_4.00=https://homologacao.sefaz.mt.gov.br/nfcews/services/NfeInutilizacao4
+NfeConsultaProtocolo_4.00=https://homologacao.sefaz.mt.gov.br/nfcews/services/NfeConsulta4
+NfeStatusServico_4.00=https://homologacao.sefaz.mt.gov.br/nfcews/services/NfeStatusServico4
+NFeAutorizacao_4.00=https://homologacao.sefaz.mt.gov.br/nfcews/services/NfeAutorizacao4
+NFeRetAutorizacao_4.00=https://homologacao.sefaz.mt.gov.br/nfcews/services/NfeRetAutorizacao4
 URL-QRCode=http://homologacao.sefaz.mt.gov.br/nfce/consultanfce
 URL-ConsultaNFCe=http://homologacao.sefaz.mt.gov.br/nfce/consultanfce
 
@@ -1138,39 +1136,3 @@ NfeConsultaProtocolo_4.00=https://nfce-homologacao.svrs.rs.gov.br/ws/NfeConsulta
 NfeStatusServico_4.00=https://nfce-homologacao.svrs.rs.gov.br/ws/NfeStatusServico/NfeStatusServico4.asmx
 NFeAutorizacao_4.00=https://nfce-homologacao.svrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4.asmx
 NFeRetAutorizacao_4.00=https://nfce-homologacao.svrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
-
-[WSDL_V4]
-NFeAutorizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeAutorizacao4
-NFeRetAutorizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeRetAutorizacao4
-NfeInutilizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeInutilizacao4
-NFeConsultaProtocolo_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeConsultaProtocolo4
-NFeStatusServico_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeStatusServico4
-RecepcaoEvento_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeRecepcaoEvento4
-CadConsultaCadastro_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/CadConsultaCadastro4
-
-[SOAP_V4]
-NFeAutorizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeAutorizacao4/nfeAutorizacaoLote
-NFeRetAutorizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeRetAutorizacao4/nfeRetAutorizacaoLote
-NfeInutilizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeInutilizacao4/nfeInutilizacaoNF
-NFeConsultaProtocolo_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeConsultaProtocolo4/nfeConsultaNF
-NFeStatusServico_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeStatusServico4/nfeStatusServicoNF
-RecepcaoEvento_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NFeRecepcaoEvento4/nfeRecepcaoEvento
-CadConsultaCadastro_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/CadConsultaCadastro4/consultaCadastro
-
-[WSDL_V4_SP]
-NFeAutorizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NfeAutorizacao4
-NFeRetAutorizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NfeRetAutorizacao4
-NfeInutilizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NfeInutilizacao4
-NFeConsultaProtocolo_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NfeConsulta4
-NFeStatusServico_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NfeStatusServico4
-RecepcaoEvento_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/RecepcaoEvento4
-CadConsultaCadastro_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/CadConsultaCadastro4
-
-[SOAP_V4_SP]
-NFeAutorizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NfeAutorizacao4/nfeAutorizacaoLote
-NFeRetAutorizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NfeRetAutorizacao4/nfeRetAutorizacaoLote
-NfeInutilizacao_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NfeInutilizacao4/nfeInutilizacaoNF
-NFeConsultaProtocolo_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NfeConsulta4/nfeConsultaNF
-NFeStatusServico_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/NfeStatusServico4/nfeStatusServicoNF
-RecepcaoEvento_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/RecepcaoEvento4/nfeRecepcaoEventoNF
-CadConsultaCadastro_4.00=http://www.portalfiscal.inf.br/nfe/wsdl/CadConsultaCadastro4/consultaCadastro
