- Corrigido URL de Consulta NFCe SP e PR

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -955,10 +955,8 @@ NfeInutilizacao_4.00=https://nfce.sefa.pr.gov.br/nfce/NFeInutilizacao4
 NfeStatusServico_4.00=https://nfce.sefa.pr.gov.br/nfce/NFeStatusServico4
 RecepcaoEvento_4.00=https://nfce.sefa.pr.gov.br/nfce/NFeRecepcaoEvento4
 NfeConsultaCadastro_4.00=https://nfce.sefa.pr.gov.br/nfce/CadConsultaCadastro4
-URL-QRCode=http://www.dfeportal.fazenda.pr.gov.br/dfe-portal/rest/servico/consultaNFCe
-URL-QRCode_4.00=http://www.fazenda.pr.gov.br/nfce/qrcode/
-URL-ConsultaNFCe=http://www.fazenda.pr.gov.br/
-URL-ConsultaNFCe_4.00=http://www.fazenda.pr.gov.br
+URL-QRCode=http://www.fazenda.pr.gov.br/nfce/qrcode/
+URL-ConsultaNFCe=http://www.fazenda.pr.gov.br
 
 [NFCe_PR_H]
 NfeAutorizacao_3.10=https://homologacao.nfce.fazenda.pr.gov.br/nfce/NFeAutorizacao3
@@ -974,10 +972,8 @@ NfeInutilizacao_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/NFeInutilizaca
 NfeStatusServico_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/NFeStatusServico4
 RecepcaoEvento_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/NFeRecepcaoEvento4
 NfeConsultaCadastro_4.00=https://homologacao.nfce.sefa.pr.gov.br/nfce/CadConsultaCadastro4
-URL-QRCode=http://www.dfeportal.fazenda.pr.gov.br/dfe-portal/rest/servico/consultaNFCe
-URL-QRCode_4.00=http://www.fazenda.pr.gov.br/nfce/qrcode/
-URL-ConsultaNFCe=http://www.fazenda.pr.gov.br/
-URL-ConsultaNFCe_4.00=http://www.fazenda.pr.gov.br
+URL-QRCode=http://www.fazenda.pr.gov.br/nfce/qrcode/
+URL-ConsultaNFCe=http://www.fazenda.pr.gov.br
 
 [NFCe_RJ_P]
 Usar=NFCe_SVRS_P
@@ -1081,8 +1077,6 @@ NfeConsultaCadastro_3.10=https://homologacao.nfe.fazenda.sp.gov.br/ws/cadconsult
 RecepcaoEvento_1.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/recepcaoevento.asmx
 NfeAutorizacao_3.10=https://homologacao.nfce.fazenda.sp.gov.br/ws/nfeautorizacao.asmx
 NFeRetAutorizacao_3.10=https://homologacao.nfce.fazenda.sp.gov.br/ws/nferetautorizacao.asmx
-URL-QRCode=https://www.homologacao.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/Paginas/ConsultaQRCode.aspx
-URL-ConsultaNFCe=https://www.homologacao.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/Paginas/ConsultaPublica.aspx
 EventoEPEC_1.00=https://homologacao.nfce.epec.fazenda.sp.gov.br/EPECws/RecepcaoEPEC.asmx
 NFeAutorizacao_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeAutorizacao4.asmx
 NFeRetAutorizacao_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeRetAutorizacao4.asmx
@@ -1090,8 +1084,8 @@ NFeInutilizacao_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeInutilizac
 NFeConsultaProtocolo_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeConsultaProtocolo4.asmx
 RecepcaoEvento_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeRecepcaoEvento4.asmx
 NfeStatusServico_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeStatusServico4.asmx
-URL-QRCode_4.00=https://www.homologacao.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/Paginas/ConsultaQRCode.aspx
-URL-ConsultaNFCe_4.00=https://www.homologacao.nfce.fazenda.sp.gov.br/NFCeConsultaPublica
+URL-QRCode=https://www.homologacao.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/Paginas/ConsultaQRCode.aspx
+URL-ConsultaNFCe=https://www.homologacao.nfce.fazenda.sp.gov.br/NFCeConsultaPublica
 
 [NFCe_TO_P]
 Usar=NFCe_SVRS_P
