Adicionado URLS CE, PE Nfe Produção e RS Nfce Produção

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -109,6 +109,13 @@ NfeConsultaCadastro_3.10=https://nfe.sefaz.ce.gov.br/nfe2/services/CadConsultaCa
 NfeDownloadNF_1.00=https://nfe.sefaz.ce.gov.br/nfe2/services/NfeDownloadNF?wsdl
 NfeAutorizacao_3.10=https://nfe.sefaz.ce.gov.br/nfe2/services/NfeAutorizacao?wsdl
 NFeRetAutorizacao_3.10=https://nfe.sefaz.ce.gov.br/nfe2/services/NfeRetAutorizacao?wsdl
+NfeInutilizacao_4.00=https://nfe.sefaz.ce.gov.br/nfe4/services/NFeInutilizacao4?wsdl
+NfeConsultaProtocolo_4.00=https://nfe.sefaz.ce.gov.br/nfe4/services/NFeConsultaProtocolo4?wsdl
+NfeStatusServico_4.00=https://nfe.sefaz.ce.gov.br/nfe4/services/NFeStatusServico4?wsdl
+NfeConsultaCadastro_4.00=https://nfe.sefaz.ce.gov.br/nfe4/services/CadConsultaCadastro4?wsdl
+RecepcaoEvento_4.00=https://nfe.sefaz.ce.gov.br/nfe4/services/NFeRecepcaoEvento4?wsdl
+NFeAutorizacao_4.00=https://nfe.sefaz.ce.gov.br/nfe4/services/NFeAutorizacao4?wsdl
+NFeRetAutorizacao_4.00=https://nfe.sefaz.ce.gov.br/nfe4/services/NFeRetAutorizacao4?wsdl
 
 [NFe_CE_H]
 RecepcaoEvento_1.00=https://nfeh.sefaz.ce.gov.br/nfe2/services/RecepcaoEvento?wsdl
@@ -130,6 +137,7 @@ NfeConsultaProtocolo_4.00=https://nfeh.sefaz.ce.gov.br/nfe4/services/NFeConsulta
 NfeStatusServico_4.00=https://nfeh.sefaz.ce.gov.br/nfe4/services/NFeStatusServico4?WSDL
 NFeAutorizacao_4.00=https://nfeh.sefaz.ce.gov.br/nfe4/services/NFeAutorizacao4?WSDL
 NFeRetAutorizacao_4.00=https://nfeh.sefaz.ce.gov.br/nfe4/services/NFeRetAutorizacao4?WSDL
+RecepcaoEvento_4.00=https://nfeh.sefaz.ce.gov.br/nfe4/services/NFeRecepcaoEvento4?WSDL
 
 [NFe_DF_P]
 Usar=NFe_SVRS_P
@@ -340,6 +348,12 @@ NfeConsultaCadastro_2.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/CadCon
 NfeConsultaCadastro_3.10=https://nfe.sefaz.pe.gov.br/nfe-service/services/CadConsultaCadastro2
 NfeAutorizacao_3.10=https://nfe.sefaz.pe.gov.br/nfe-service/services/NfeAutorizacao?wsdl
 NFeRetAutorizacao_3.10=https://nfe.sefaz.pe.gov.br/nfe-service/services/NfeRetAutorizacao?wsdl
+NfeInutilizacao_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeInutilizacao4
+NfeConsultaProtocolo_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeConsultaProtocolo4
+NfeStatusServico_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeStatusServico4
+RecepcaoEvento_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeRecepcaoEvento4
+NFeAutorizacao_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeAutorizacao4
+NFeRetAutorizacao_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeRetAutorizacao4
 
 [NFe_PE_H]
 RecepcaoEvento_1.00=https://nfehomolog.sefaz.pe.gov.br/nfe-service/services/RecepcaoEvento
@@ -1012,6 +1026,11 @@ NfeConsultaProtocolo_3.10=https://nfce.sefazrs.rs.gov.br/ws/NfeConsulta/NfeConsu
 NfeInutilizacao_3.10=https://nfce.sefazrs.rs.gov.br/ws/nfeinutilizacao/nfeinutilizacao2.asmx
 NfeStatusServico_3.10=https://nfce.sefazrs.rs.gov.br/ws/NfeStatusServico/NfeStatusServico2.asmx
 RecepcaoEvento_1.00=https://nfce.sefazrs.rs.gov.br/ws/recepcaoevento/recepcaoevento.asmx
+NfeStatusServico_4.00=https://nfce.sefazrs.rs.gov.br/ws/NfeStatusServico/NfeStatusServico4.asmx
+NfeAutorizacao_4.00=https://nfce.sefazrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4.asmx
+RecepcaoEvento_4.00=https://nfce.sefazrs.rs.gov.br/ws/recepcaoevento/recepcaoevento4.asmx
+NfeConsultaProtocolo_4.00=https://nfce.sefazrs.rs.gov.br/ws/NfeConsulta/NfeConsulta4.asmx
+NfeInutilizacao_4.00=https://nfce.sefazrs.rs.gov.br/ws/nfeinutilizacao/nfeinutilizacao4.asmx
 URL-QRCode=https://www.sefaz.rs.gov.br/NFCE/NFCE-COM.aspx
 URL-ConsultaNFCe=https://www.sefaz.rs.gov.br/NFE/NFE-NFC.aspx
 
