- Adicionado URLS BA Nfce/Nfe Produção e Homologação - Adicionado URLS SP NFCe Produção

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -93,6 +93,7 @@ NfeInutilizacao_4.00=https://hnfe.sefaz.ba.gov.br/webservices/NFeInutilizacao4/N
 NFeRetAutorizacao_4.00=https://hnfe.sefaz.ba.gov.br/webservices/NFeRetAutorizacao4/NFeRetAutorizacao4.asmx
 NfeStatusServico_4.00=https://hnfe.sefaz.ba.gov.br/webservices/NFeStatusServico4/NFeStatusServico4.asmx
 RecepcaoEvento_4.00=https://hnfe.sefaz.ba.gov.br/webservices/NFeRecepcaoEvento4/NFeRecepcaoEvento4.asmx
+NfeConsultaCadastro_4.00=https://hnfe.sefaz.ba.gov.br/webservices/CadConsultaCadastro4/CadConsultaCadastro4.asmx
 
 [NFe_CE_P]
 RecepcaoEvento_1.00=https://nfe.sefaz.ce.gov.br/nfe2/services/RecepcaoEvento?wsdl
@@ -628,6 +629,7 @@ RecepcaoEvento_4.00=https://www.svc.fazenda.gov.br/NFeRecepcaoEvento4/NFeRecepca
 NFeAutorizacao_4.00=https://www.svc.fazenda.gov.br/NFeAutorizacao4/NFeAutorizacao4.asmx
 NFeRetAutorizacao_4.00=https://www.svc.fazenda.gov.br/NFeRetAutorizacao4/NFeRetAutorizacao4.asmx
 
+
 [NFe_SVC-AN_H]
 RecepcaoEvento_1.00=https://hom.svc.fazenda.gov.br/RecepcaoEvento/RecepcaoEvento.asmx
 NfeRecepcao_2.00=https://hom.svc.fazenda.gov.br/NfeRecepcao2/NfeRecepcao2.asmx
@@ -740,13 +742,14 @@ URL-ConsultaNFCe=http://homnfce.sefaz.am.gov.br/nfceweb/formConsulta.do
 
 [NFCe_BA_P]
 Usar=NFCe_SVRS_P
-URL-QRCode=http://nfe.sefaz.ba.gov.br/servicos/nfce/modulos/geral/NFCEC_consulta_chave_acesso.aspx
-URL-ConsultaNFCe=http://nfe.sefaz.ba.gov.br/servicos/nfce/default.aspx
+URL-QRCode_4.00=http://nfe.sefaz.ba.gov.br/servicos/nfce/qrcode.aspx
+URL-ConsultaNFCe_4.00=http://www.sefaz.ba.gov.br/nfce/consulta
 
 [NFCe_BA_H]
 Usar=NFCe_SVRS_H
-URL-QRCode=http://hnfe.sefaz.ba.gov.br/servicos/nfce/modulos/geral/NFCEC_consulta_chave_acesso.aspx
-URL-ConsultaNFCe=http://nfe.sefaz.ba.gov.br/servicos/nfce/default.aspx
+URL-QRCode_4.00=http://hnfe.sefaz.ba.gov.br/servicos/nfce/qrcode.aspx
+URL-ConsultaNFCe_4.00=http://hinternet.sefaz.ba.gov.br/nfce/consulta
+
 
 [NFCe_CE_P]
 NfeAutorizacao_3.10=https://nfce.sefaz.ce.gov.br/nfce/services/NfeAutorizacao?WSDL
@@ -1084,9 +1087,15 @@ NfeConsultaCadastro_3.10=https://nfe.fazenda.sp.gov.br/ws/cadconsultacadastro2.a
 RecepcaoEvento_1.00=https://nfce.fazenda.sp.gov.br/ws/recepcaoevento.asmx
 NfeAutorizacao_3.10=https://nfce.fazenda.sp.gov.br/ws/nfeautorizacao.asmx
 NFeRetAutorizacao_3.10=https://nfce.fazenda.sp.gov.br/ws/nferetautorizacao.asmx
-URL-QRCode=https://www.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/Paginas/ConsultaQRCode.aspx
-URL-ConsultaNFCe=https://www.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/Paginas/ConsultaPublica.aspx
 EventoEPEC_1.00=https://nfce.epec.fazenda.sp.gov.br/EPECws/RecepcaoEPEC.asmx
+NFeAutorizacao_4.00=https://nfce.fazenda.sp.gov.br/ws/NFeAutorizacao4.asmx
+NFeRetAutorizacao_4.00=https://nfce.fazenda.sp.gov.br/ws/NFeRetAutorizacao4.asmx
+NFeInutilizacao_4.00=https://nfce.fazenda.sp.gov.br/ws/NFeInutilizacao4.asmx
+NFeConsultaProtocolo_4.00=https://nfce.fazenda.sp.gov.br/ws/NFeConsultaProtocolo4.asmx
+RecepcaoEvento_4.00=https://nfce.fazenda.sp.gov.br/ws/NFeRecepcaoEvento4.asmx
+NfeStatusServico_4.00=https://nfce.fazenda.sp.gov.br/ws/NFeStatusServico4.asmx
+URL-QRCode=https://www.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/Paginas/ConsultaQRCode.aspx
+URL-ConsultaNFCe=https://www.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/
 
 [NFCe_SP_H]
 NfeInutilizacao_3.10=https://homologacao.nfce.fazenda.sp.gov.br/ws/nfeinutilizacao2.asmx
@@ -1104,7 +1113,7 @@ NFeConsultaProtocolo_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeConsu
 RecepcaoEvento_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeRecepcaoEvento4.asmx
 NfeStatusServico_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeStatusServico4.asmx
 URL-QRCode=https://www.homologacao.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/Paginas/ConsultaQRCode.aspx
-URL-ConsultaNFCe=https://www.homologacao.nfce.fazenda.sp.gov.br/NFCeConsultaPublica
+URL-ConsultaNFCe=https://www.homologacao.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/
 
 [NFCe_TO_P]
 Usar=NFCe_SVRS_P
