--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -28,9 +28,9 @@ NfeConsultaProtocolo_3.10=https://nfe.sefaz.am.gov.br/services2/services/NfeCons
 NfeStatusServico_2.00=https://nfe.sefaz.am.gov.br/services2/services/NfeStatusServico2
 NfeStatusServico_3.10=https://nfe.sefaz.am.gov.br/services2/services/NfeStatusServico2
 NfeConsultaCadastro_2.00=https://nfe.sefaz.am.gov.br/services2/services/cadconsultacadastro2
-NfeConsultaCadastro_3.10=https://nfe.sefaz.am.gov.br/services2/services/cadconsultacadastro2
 NfeAutorizacao_3.10=https://nfe.sefaz.am.gov.br/services2/services/NfeAutorizacao
 NFeRetAutorizacao_3.10=https://nfe.sefaz.am.gov.br/services2/services/NfeRetAutorizacao
+NfeConsultaCadastro_4.00=https://nfe.sefaz.am.gov.br/services2/services/cadconsultacadastro2
 
 [NFe_AM_H]
 RecepcaoEvento_1.00=https://homnfe.sefaz.am.gov.br/services2/services/RecepcaoEvento
@@ -42,10 +42,10 @@ NfeConsultaProtocolo_2.00=https://homnfe.sefaz.am.gov.br/services2/services/NfeC
 NfeConsultaProtocolo_3.10=https://homnfe.sefaz.am.gov.br/services2/services/NfeConsulta2
 NfeStatusServico_2.00=https://homnfe.sefaz.am.gov.br/services2/services/NfeStatusServico2
 NfeStatusServico_3.10=https://homnfe.sefaz.am.gov.br/services2/services/NfeStatusServico2
-NfeConsultaCadastro_2.00=https://homnfe.sefaz.am.gov.br/services2/services/cadconsultacadastro2
 NfeConsultaCadastro_3.10=https://homnfe.sefaz.am.gov.br/services2/services/cadconsultacadastro2
 NfeAutorizacao_3.10=https://homnfe.sefaz.am.gov.br/services2/services/NfeAutorizacao
 NFeRetAutorizacao_3.10=https://homnfe.sefaz.am.gov.br/services2/services/NfeRetAutorizacao
+NfeConsultaCadastro_4.00=https://homnfe.sefaz.am.gov.br/services2/services/cadconsultacadastro2
 NfeConsultaProtocolo_4.00=https://homnfe.sefaz.am.gov.br/services2/services/NfeConsulta4
 NfeStatusServico_4.00=https://homnfe.sefaz.am.gov.br/services2/services/NfeStatusServico4
 NfeInutilizacao_4.00=https://homnfe.sefaz.am.gov.br/services2/services/NfeInutilizacao4
@@ -128,7 +128,6 @@ NfeConsultaProtocolo_2.00=https://nfeh.sefaz.ce.gov.br/nfe2/services/NfeConsulta
 NfeConsultaProtocolo_3.10=https://nfeh.sefaz.ce.gov.br/nfe2/services/NfeConsulta2?wsdl
 NfeStatusServico_2.00=https://nfeh.sefaz.ce.gov.br/nfe2/services/NfeStatusServico2?wsdl
 NfeStatusServico_3.10=https://nfeh.sefaz.ce.gov.br/nfe2/services/NfeStatusServico2?wsdl
-NfeConsultaCadastro_2.00=https://nfeh.sefaz.ce.gov.br/nfe2/services/CadConsultaCadastro2?wsdl
 NfeConsultaCadastro_3.10=https://nfeh.sefaz.ce.gov.br/nfe2/services/CadConsultaCadastro2?wsdl
 NfeDownloadNF_1.00=https://nfeh.sefaz.ce.gov.br/nfe2/services/NfeDownloadNF?wsdl
 NfeAutorizacao_3.10=https://nfeh.sefaz.ce.gov.br/nfe2/services/NfeAutorizacao?wsdl
@@ -139,6 +138,7 @@ NfeStatusServico_4.00=https://nfeh.sefaz.ce.gov.br/nfe4/services/NFeStatusServic
 NFeAutorizacao_4.00=https://nfeh.sefaz.ce.gov.br/nfe4/services/NFeAutorizacao4?WSDL
 NFeRetAutorizacao_4.00=https://nfeh.sefaz.ce.gov.br/nfe4/services/NFeRetAutorizacao4?WSDL
 RecepcaoEvento_4.00=https://nfeh.sefaz.ce.gov.br/nfe4/services/NFeRecepcaoEvento4?WSDL
+NfeConsultaCadastro_4.00=https://nfeh.sefaz.ce.gov.br/nfe2/services/CadConsultaCadastro2?wsdl
 
 [NFe_DF_P]
 Usar=NFe_SVRS_P
@@ -148,11 +148,11 @@ Usar=NFe_SVRS_H
 
 [NFe_ES_P]
 Usar=NFe_SVRS_P
-NfeConsultaCadastro_2.00=https://app.sefaz.es.gov.br/ConsultaCadastroService/CadConsultaCadastro2.asmx
+NfeConsultaCadastro_4.00=https://app.sefaz.es.gov.br/ConsultaCadastroService/CadConsultaCadastro2.asmx
 
 [NFe_ES_H]
 Usar=NFe_SVRS_H
-NfeConsultaCadastro_2.00=https://app.sefaz.es.gov.br/ConsultaCadastroService/CadConsultaCadastro2.asmx
+NfeConsultaCadastro_4.00=https://app.sefaz.es.gov.br/ConsultaCadastroService/CadConsultaCadastro2.asmx
 
 [NFe_GO_P]
 RecepcaoEvento_1.00=https://nfe.sefaz.go.gov.br/nfe/services/v2/RecepcaoEvento?wsdl
@@ -200,11 +200,11 @@ NFeRetAutorizacao_4.00=https://homolog.sefaz.go.gov.br/nfe/services/NFeRetAutori
 
 [NFe_MA_P]
 Usar=NFe_SVAN_P
-NfeConsultaCadastro_2.00=https://sistemas.sefaz.ma.gov.br/wscadastro/CadConsultaCadastro2?wsdl
+NfeConsultaCadastro_4.00=https://sistemas.sefaz.ma.gov.br/wscadastro/CadConsultaCadastro2?wsdl
 
 [NFe_MA_H]
 Usar=NFe_SVAN_H
-NfeConsultaCadastro_2.0=https://sistemas.sefaz.ma.gov.br/wscadastro/CadConsultaCadastro2?wsdl
+NfeConsultaCadastro_4.0=https://sistemas.sefaz.ma.gov.br/wscadastro/CadConsultaCadastro2?wsdl
 
 [NFe_MG_P]
 NfeRecepcao_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeRecepcao2
@@ -212,15 +212,16 @@ NfeRetRecepcao_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeRetRecepcao2
 NfeInutilizacao_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeInutilizacao2
 NfeConsultaProtocolo_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeConsulta2
 NfeStatusServico_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeStatus2
-NfeConsultaCadastro_2.00=https://nfe.fazenda.mg.gov.br/nfe2/services/cadconsultacadastro2
 RecepcaoEvento_1.00=https://nfe.fazenda.mg.gov.br/nfe2/services/RecepcaoEvento
 NfeAutorizacao_3.10=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeAutorizacao
 NFeRetAutorizacao_3.10=https://nfe.fazenda.mg.gov.br/nfe2/services/NfeRetAutorizacao
+NfeConsultaCadastro_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/cadconsultacadastro2
 NfeInutilizacao_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NFeInutilizacao4
 NfeConsultaProtocolo_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NFeConsultaProtocolo4
 NfeStatusServico_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NFeStatusServico4
 NFeAutorizacao_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NFeAutorizacao4
 NFeRetAutorizacao_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NFeRetAutorizacao4
+RecepcaoEvento_4.00=https://nfe.fazenda.mg.gov.br/nfe2/services/NFeRecepcaoEvento4
 
 [NFe_MG_H]
 RecepcaoEvento_1.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/RecepcaoEvento
@@ -232,10 +233,10 @@ NfeConsultaProtocolo_2.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/NfeConsul
 NfeConsultaProtocolo_3.10=https://hnfe.fazenda.mg.gov.br/nfe2/services/NfeConsulta2
 NfeStatusServico_2.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/NfeStatusServico2
 NfeStatusServico_3.10=https://hnfe.fazenda.mg.gov.br/nfe2/services/NfeStatusServico2
-NfeConsultaCadastro_2.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/cadconsultacadastro2
 NfeConsultaCadastro_3.10=https://hnfe.fazenda.mg.gov.br/nfe2/services/cadconsultacadastro2
 NfeAutorizacao_3.10=https://hnfe.fazenda.mg.gov.br/nfe2/services/NfeAutorizacao
 NFeRetAutorizacao_3.10=https://hnfe.fazenda.mg.gov.br/nfe2/services/NfeRetAutorizacao
+NfeConsultaCadastro_4.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/cadconsultacadastro2
 NFeAutorizacao_4.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/NFeAutorizacao4
 NFeConsultaProtocolo_4.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/NFeConsultaProtocolo4
 NFeInutilizacao_4.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/NFeInutilizacao4
@@ -277,12 +278,14 @@ NfeStatusServico_2.00=https://homologacao.nfe.ms.gov.br/homologacao/services2/Nf
 NfeStatusServico_3.10=https://homologacao.nfe.ms.gov.br/homologacao/services2/NfeStatusServico2
 NfeAutorizacao_3.10=https://homologacao.nfe.ms.gov.br/homologacao/services2/NfeAutorizacao
 NFeRetAutorizacao_3.10=https://homologacao.nfe.ms.gov.br/homologacao/services2/NfeRetAutorizacao
-NFeAutorizacao_4.00=https://homologacao.nfe.ms.gov.br/ws/NFeAutorizacao4
-NFeRetAutorizacao_4.00=https://homologacao.nfe.ms.gov.br/ws/NFeRetAutorizacao4
-NFeConsultaProtocolo_4.00=https://homologacao.nfe.ms.gov.br/ws/NFeConsultaProtocolo4
-NFeStatusServico_4.00=https://homologacao.nfe.ms.gov.br/ws/NFeStatusServico4
-NFeInutilizacao_4.00=https://homologacao.nfe.ms.gov.br/ws/NFeInutilizacao4
-RecepcaoEvento_4.00=https://homologacao.nfe.ms.gov.br/ws/NFeRecepcaoEvento4
+NFeAutorizacao_4.00=https://hom.nfe.sefaz.ms.gov.br/ws/NFeAutorizacao4
+NFeRetAutorizacao_4.00=https://hom.nfe.sefaz.ms.gov.br/ws/NFeRetAutorizacao4
+NFeConsultaProtocolo_4.00=https://hom.nfe.sefaz.ms.gov.br/ws/NFeConsultaProtocolo4
+NFeStatusServico_4.00=https://hom.nfe.sefaz.ms.gov.br/ws/NFeStatusServico4
+NFeInutilizacao_4.00=https://hom.nfe.sefaz.ms.gov.br/ws/NFeInutilizacao4
+RecepcaoEvento_4.00=https://hom.nfe.sefaz.ms.gov.br/ws/NFeRecepcaoEvento4
+NfeConsultaCadastro_4.00=https://hom.nfe.sefaz.ms.gov.br/ws/CadConsultaCadastro4
+
 
 [NFe_MT_P]
 NfeRecepcao_2.00=https://nfe.sefaz.mt.gov.br/nfews/v2/services/NfeRecepcao2?wsdl
@@ -345,10 +348,10 @@ NfeConsultaProtocolo_2.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NfeCo
 NfeConsultaProtocolo_3.10=https://nfe.sefaz.pe.gov.br/nfe-service/services/NfeConsulta2
 NfeStatusServico_2.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NfeStatusServico2
 NfeStatusServico_3.10=https://nfe.sefaz.pe.gov.br/nfe-service/services/NfeStatusServico2
-NfeConsultaCadastro_2.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/CadConsultaCadastro2
 NfeConsultaCadastro_3.10=https://nfe.sefaz.pe.gov.br/nfe-service/services/CadConsultaCadastro2
 NfeAutorizacao_3.10=https://nfe.sefaz.pe.gov.br/nfe-service/services/NfeAutorizacao?wsdl
 NFeRetAutorizacao_3.10=https://nfe.sefaz.pe.gov.br/nfe-service/services/NfeRetAutorizacao?wsdl
+NfeConsultaCadastro_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/CadConsultaCadastro2
 NfeInutilizacao_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeInutilizacao4
 NfeConsultaProtocolo_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeConsultaProtocolo4
 NfeStatusServico_4.00=https://nfe.sefaz.pe.gov.br/nfe-service/services/NFeStatusServico4
@@ -595,6 +598,7 @@ NfeStatusServico_4.00=https://nfe.svrs.rs.gov.br/ws/NfeStatusServico/NfeStatusSe
 RecepcaoEvento_4.00=https://nfe.svrs.rs.gov.br/ws/recepcaoevento/recepcaoevento4.asmx
 NfeConsultaCadastro_4.00=https://cad.svrs.rs.gov.br/ws/cadconsultacadastro/cadconsultacadastro4.asmx
 
+
 [NFe_SVRS_H]
 NfeAutorizacao_3.10=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao.asmx
 NFeRetAutorizacao_3.10=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao.asmx
@@ -612,6 +616,7 @@ NfeStatusServico_4.00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeStatusServico
 RecepcaoEvento_4.00=https://nfe-homologacao.svrs.rs.gov.br/ws/recepcaoevento/recepcaoevento4.asmx
 NFeAutorizacao_4.00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeAutorizacao/NFeAutorizacao4.asmx
 NFeRetAutorizacao_4.00=https://nfe-homologacao.svrs.rs.gov.br/ws/NfeRetAutorizacao/NFeRetAutorizacao4.asmx
+NfeConsultaCadastro_4.00=https://cad-homologacao.svrs.rs.gov.br/ws/cadconsultacadastro/cadconsultacadastro4.asmx
 
 [NFe_SVC-AN_P]
 RecepcaoEvento_1.00=https://www.svc.fazenda.gov.br/RecepcaoEvento/RecepcaoEvento.asmx
@@ -1094,8 +1099,9 @@ NFeInutilizacao_4.00=https://nfce.fazenda.sp.gov.br/ws/NFeInutilizacao4.asmx
 NFeConsultaProtocolo_4.00=https://nfce.fazenda.sp.gov.br/ws/NFeConsultaProtocolo4.asmx
 RecepcaoEvento_4.00=https://nfce.fazenda.sp.gov.br/ws/NFeRecepcaoEvento4.asmx
 NfeStatusServico_4.00=https://nfce.fazenda.sp.gov.br/ws/NFeStatusServico4.asmx
-URL-QRCode=https://www.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/Paginas/ConsultaQRCode.aspx
-URL-ConsultaNFCe=https://www.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/
+URL-QRCode=https://www.nfce.fazenda.sp.gov.br/qrcode
+URL-ConsultaNFCe=https://www.nfce.fazenda.sp.gov.br/consulta
+
 
 [NFCe_SP_H]
 NfeInutilizacao_3.10=https://homologacao.nfce.fazenda.sp.gov.br/ws/nfeinutilizacao2.asmx
@@ -1112,8 +1118,8 @@ NFeInutilizacao_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeInutilizac
 NFeConsultaProtocolo_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeConsultaProtocolo4.asmx
 RecepcaoEvento_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeRecepcaoEvento4.asmx
 NfeStatusServico_4.00=https://homologacao.nfce.fazenda.sp.gov.br/ws/NFeStatusServico4.asmx
-URL-QRCode=https://www.homologacao.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/Paginas/ConsultaQRCode.aspx
-URL-ConsultaNFCe=https://www.homologacao.nfce.fazenda.sp.gov.br/NFCeConsultaPublica/
+URL-QRCode=https://www.homologacao.nfce.fazenda.sp.gov.br/qrcode
+URL-ConsultaNFCe=https://www.homologacao.nfce.fazenda.sp.gov.br/consulta
 
 [NFCe_TO_P]
 Usar=NFCe_SVRS_P
