- Corrigido URLs QrCode Bahia

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -747,13 +747,13 @@ URL-ConsultaNFCe=http://homnfce.sefaz.am.gov.br/nfceweb/formConsulta.do
 
 [NFCe_BA_P]
 Usar=NFCe_SVRS_P
-URL-QRCode_4.00=http://nfe.sefaz.ba.gov.br/servicos/nfce/qrcode.aspx
-URL-ConsultaNFCe_4.00=http://www.sefaz.ba.gov.br/nfce/consulta
+URL-QRCode=http://nfe.sefaz.ba.gov.br/servicos/nfce/qrcode.aspx
+URL-ConsultaNFCe=http://www.sefaz.ba.gov.br/nfce/consulta
 
 [NFCe_BA_H]
 Usar=NFCe_SVRS_H
-URL-QRCode_4.00=http://hnfe.sefaz.ba.gov.br/servicos/nfce/qrcode.aspx
-URL-ConsultaNFCe_4.00=http://hinternet.sefaz.ba.gov.br/nfce/consulta
+URL-QRCode=http://hnfe.sefaz.ba.gov.br/servicos/nfce/qrcode.aspx
+URL-ConsultaNFCe=http://hinternet.sefaz.ba.gov.br/nfce/consulta
 
 
 [NFCe_CE_P]
