- Adicionado URLs NFe Produção Amazonas - Alterado Urls NFce Homologação Ms - Alterado Urls COnsulta NFce GO

--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -31,6 +31,13 @@ NfeConsultaCadastro_2.00=https://nfe.sefaz.am.gov.br/services2/services/cadconsu
 NfeAutorizacao_3.10=https://nfe.sefaz.am.gov.br/services2/services/NfeAutorizacao
 NFeRetAutorizacao_3.10=https://nfe.sefaz.am.gov.br/services2/services/NfeRetAutorizacao
 NfeConsultaCadastro_4.00=https://nfe.sefaz.am.gov.br/services2/services/cadconsultacadastro2
+NfeConsultaProtocolo_4.00=https://nfe.sefaz.am.gov.br/services2/services/NfeConsulta4
+NfeStatusServico_4.00=https://nfe.sefaz.am.gov.br/services2/services/NfeStatusServico4
+NfeInutilizacao_4.00=https://nfe.sefaz.am.gov.br/services2/services/NfeInutilizacao4
+NfeAutorizacao_4.00=https://nfe.sefaz.am.gov.br/services2/services/NfeAutorizacao4
+NFeRetAutorizacao_4.00=https://nfe.sefaz.am.gov.br/services2/services/NfeRetAutorizacao4
+RecepcaoEvento_4.00=https://nfe.sefaz.am.gov.br/services2/services/RecepcaoEvento4
+
 
 [NFe_AM_H]
 RecepcaoEvento_1.00=https://homnfe.sefaz.am.gov.br/services2/services/RecepcaoEvento
@@ -821,7 +828,7 @@ NfeConsultaCadastro_4.00=https://nfe.sefaz.go.gov.br/nfe/services/CadConsultaCad
 NFeAutorizacao_4.00=https://nfe.sefaz.go.gov.br/nfe/services/NFeAutorizacao4?wsdl
 NFeRetAutorizacao_4.00=https://nfe.sefaz.go.gov.br/nfe/services/NFeRetAutorizacao4?wsdl
 URL-QRCode=http://nfe.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
-URL-ConsultaNFCe=http://nfe.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
+URL-ConsultaNFCe=http://www.nfce.go.gov.br/post/ver/214344/consulta-nfce
 
 [NFCe_GO_H]
 RecepcaoEvento_1.00=https://homolog.sefaz.go.gov.br/nfe/services/v2/RecepcaoEvento?wsdl
@@ -846,7 +853,7 @@ NfeConsultaCadastro_4.00=https://homolog.sefaz.go.gov.br/nfe/services/CadConsult
 NFeAutorizacao_4.00=https://homolog.sefaz.go.gov.br/nfe/services/NFeAutorizacao4?wsdl
 NFeRetAutorizacao_4.00=https://homolog.sefaz.go.gov.br/nfe/services/NFeRetAutorizacao4?wsdl
 URL-QRCode=http://homolog.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
-URL-ConsultaNFCe=http://homolog.sefaz.go.gov.br/nfeweb/sites/nfce/danfeNFCe
+URL-ConsultaNFCe=http://www.nfce.go.gov.br/post/ver/214413/consulta-nfc-e-homologacao
 
 [NFCe_MA_P]
 Usar=NFCe_SVRS_P
@@ -881,13 +888,13 @@ NfeInutilizacao_3.10=https://homologacao.nfce.fazenda.ms.gov.br/homologacao/serv
 NfeConsultaProtocolo_3.10=https://homologacao.nfce.fazenda.ms.gov.br/homologacao/services2/NfeConsulta2
 NfeStatusServico_3.10=https://homologacao.nfce.fazenda.ms.gov.br/homologacao/services2/NfeStatusServico2
 NfeConsultaCadastro_3.10=https://homologacao.nfce.fazenda.ms.gov.br/homologacao/services2/CadConsultaCadastro2
-NfeAutorizacao_4.00=https://homologacao.nfce.fazenda.ms.gov.br/ws/NFeAutorizacao4
-NFeRetAutorizacao_4.00=https://homologacao.nfce.fazenda.ms.gov.br/ws/NFeRetAutorizacao4
-NfeConsultaProtocolo_4.00=https://homologacao.nfce.fazenda.ms.gov.br/ws/NFeConsultaProtocolo4
-NfeInutilizacao_4.00=https://homologacao.nfce.fazenda.ms.gov.br/ws/NFeInutilizacao4
-NfeStatusServico_4.00=https://homologacao.nfce.fazenda.ms.gov.br/ws/NFeStatusServico4
-RecepcaoEvento_4.00=https://homologacao.nfce.fazenda.ms.gov.br/ws/NFeRecepcaoEvento4
-NfeConsultaCadastro_4.00=https://homologacao.nfce.fazenda.ms.gov.br/ws/CadConsultaCadastro4
+NfeAutorizacao_4.00=https://hom.nfce.sefaz.ms.gov.br/ws/NFeAutorizacao4
+NFeRetAutorizacao_4.00=https://hom.nfce.sefaz.ms.gov.br/ws/NFeRetAutorizacao4
+NfeConsultaProtocolo_4.00=https://hom.nfce.sefaz.ms.gov.br/ws/NFeConsultaProtocolo4
+NfeInutilizacao_4.00=https://hom.nfce.sefaz.ms.gov.br/ws/NFeInutilizacao4
+NfeStatusServico_4.00=https://hom.nfce.sefaz.ms.gov.br/ws/NFeStatusServico4
+RecepcaoEvento_4.00=https://hom.nfce.sefaz.ms.gov.br/ws/NFeRecepcaoEvento4
+NfeConsultaCadastro_4.00=https://hom.nfe.sefaz.ms.gov.br/ws/CadConsultaCadastro4
 URL-QRCode=http://www.dfe.ms.gov.br/nfce/qrcode
 URL-ConsultaNFCe=http://www.dfe.ms.gov.br/nfce
 
