--- a/pom.xml
+++ b/pom.xml
@@ -72,7 +72,15 @@
 			<version>4.4.6</version>
 		</dependency>
 
-    </dependencies>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
+
+
+	</dependencies>
 
 	<build>
 		<plugins>
