--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>br.com.samuelweb</groupId>
 	<artifactId>java-nfe</artifactId>
-  <version>4.00.5</version>
+    <version>4.00.6</version>
 	<name>Java_NFe</name>
 
 	<!-- Repositorios SVN Autocom -->
@@ -42,14 +42,14 @@
 		<dependency>
 			<groupId>br.com.autocom</groupId>
 			<artifactId>nfe-xsd</artifactId>
-            <version>9-v1.50a</version>
+            <version>9-v1.60b</version>
 		</dependency>
 
 		<!-- Certificado Utils -->
 		<dependency>
 			<groupId>br.com.samuelweb</groupId>
 			<artifactId>java_certificado</artifactId>
-            <version>1.8</version>
+            <version>1.9</version>
 		</dependency>
 
 		<!-- MArsheller Cdata -->
