--- a/src/main/resources/WebServicesNfe.ini
+++ b/src/main/resources/WebServicesNfe.ini
@@ -131,13 +131,13 @@ NFeStatusServico_4.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/NFeStatusServ
 RecepcaoEvento_4.00=https://hnfe.fazenda.mg.gov.br/nfe2/services/NFeRecepcaoEvento4
 
 [NFe_MS_P]
-NfeInutilizacao_4.00=https://nfe.fazenda.ms.gov.br/ws/NFeInutilizacao4
-NfeConsultaProtocolo_4.00=https://nfe.fazenda.ms.gov.br/ws/NFeConsultaProtocolo4
-NfeStatusServico_4.00=https://nfe.fazenda.ms.gov.br/ws/NFeStatusServico4
-NfeConsultaCadastro_4.00=https://nfe.fazenda.ms.gov.br/ws/CadConsultaCadastro4
-RecepcaoEvento_4.00=https://nfe.fazenda.ms.gov.br/ws/NFeRecepcaoEvento4
-NFeAutorizacao_4.00=https://nfe.fazenda.ms.gov.br/ws/NFeAutorizacao4
-NFeRetAutorizacao_4.00=https://nfe.fazenda.ms.gov.br/ws/NFeRetAutorizacao4
+NfeInutilizacao_4.00=https://nfe.sefaz.ms.gov.br/ws/NFeInutilizacao4
+NfeConsultaProtocolo_4.00=https://nfe.sefaz.ms.gov.br/ws/NFeConsultaProtocolo4
+NfeStatusServico_4.00=https://nfe.sefaz.ms.gov.br/ws/NFeStatusServico4
+NfeConsultaCadastro_4.00=https://nfe.sefaz.ms.gov.br/ws/CadConsultaCadastro4
+RecepcaoEvento_4.00=https://nfe.sefaz.ms.gov.br/ws/NFeRecepcaoEvento4
+NFeAutorizacao_4.00=https://nfe.sefaz.ms.gov.br/ws/NFeAutorizacao4
+NFeRetAutorizacao_4.00=https://nfe.sefaz.ms.gov.br/ws/NFeRetAutorizacao4
 
 [NFe_MS_H]
 NFeAutorizacao_4.00=https://hom.nfe.sefaz.ms.gov.br/ws/NFeAutorizacao4
@@ -403,11 +403,23 @@ URL-ConsultaNFCe=https://www.sefaz.ap.gov.br/sate1/seg/SEGf_AcessarFuncao.jsp?cd
 
 [NFCe_AM_P]
 AdministrarCSCNFCe_1.00=https://nfce.sefaz.am.gov.br/nfce-services/services/CscNFCe
+NfeConsultaProtocolo_4.00=https://nfce.sefaz.am.gov.br/nfce-services/services/NfeConsulta4
+NfeStatusServico_4.00=https://nfce.sefaz.am.gov.br/nfce-services/services/NfeStatusServico4
+NfeInutilizacao_4.00=https://nfce.sefaz.am.gov.br/nfce-services/services/NfeInutilizacao4
+NfeAutorizacao_4.00=https://nfce.sefaz.am.gov.br/nfce-services/services/NfeAutorizacao4
+NFeRetAutorizacao_4.00=https://nfce.sefaz.am.gov.br/nfce-services/services/NfeRetAutorizacao4
+RecepcaoEvento_4.00=https://nfce.sefaz.am.gov.br/nfce-services/services/RecepcaoEvento4
 URL-QRCode=http://sistemas.sefaz.am.gov.br/nfceweb/consultarNFCe.jsp
 URL-ConsultaNFCe=http://sistemas.sefaz.am.gov.br/nfceweb/formConsulta.do
 
 [NFCe_AM_H]
 AdministrarCSCNFCe_1.00=https://homnfce.sefaz.am.gov.br/nfce-services/services/CscNFCe
+NfeConsultaProtocolo_4.00=https://homnfce.sefaz.am.gov.br/nfce-services-nac/services/NfeConsulta4
+NfeStatusServico_4.00=https://homnfce.sefaz.am.gov.br/nfce-services-nac/services/NfeStatusServico4
+NfeInutilizacao_4.00=https://homnfce.sefaz.am.gov.br/nfce-services-nac/services/NfeInutilizacao4
+NfeAutorizacao_4.00=https://homnfce.sefaz.am.gov.br/nfce-services-nac/services/NfeAutorizacao4
+NFeRetAutorizacao_4.00=https://homnfce.sefaz.am.gov.br/nfce-services-nac/services/NfeRetAutorizacao4
+RecepcaoEvento_4.00=https://homnfce.sefaz.am.gov.br/nfce-services-nac/services/RecepcaoEvento4
 URL-QRCode=http://homnfce.sefaz.am.gov.br/nfceweb/consultarNFCe.jsp
 URL-ConsultaNFCe=http://homnfce.sefaz.am.gov.br/nfceweb/formConsulta.do
 
@@ -487,6 +499,13 @@ URL-ConsultaNFCe=http://www.hom.nfce.sefaz.ma.gov.br/portal/consultaNFe.do
 [NFCe_MG_H]
 
 [NFCe_MS_P]
+NFeAutorizacao_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeAutorizacao4
+NFeRetAutorizacao_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeRetAutorizacao4
+RecepcaoEvento_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeRecepcaoEvento4
+NfeInutilizacao_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeInutilizacao4
+NfeConsultaProtocolo_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeConsultaProtocolo4
+NfeStatusServico_4.00=https://nfce.sefaz.ms.gov.br/ws/NFeStatusServico4
+NfeConsultaCadastro_4.00=https://nfe.sefaz.ms.gov.br/ws/CadConsultaCadastro4
 URL-QRCode=http://www.dfe.ms.gov.br/nfce/qrcode
 URL-ConsultaNFCe=http://www.dfe.ms.gov.br/nfce
 
